--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -16,7 +16,7 @@
 
 
             {{else}}
-                <a href="http://localhost:5050/user/registration"><li>Resgistrar</li></a>
+                <a href="/user/registration"><li>Resgistrar</li></a>
                 <a href="/user/login"><li>Entrar</li></a>
             {{/if}}
 
