--- a/views/user/login.handlebars
+++ b/views/user/login.handlebars
@@ -10,7 +10,7 @@
             <a href="/products"><li>Produtos</li></a>
             <a href="/admin"><li>Área Admin</li></a>
             <h1 class="bar"></h1>
-            <a href="http://localhost:5050/user/registration"><li>Resgistrar</li></a>
+            <a href="/user/registration"><li>Resgistrar</li></a>
             <a href="/user/login"><li>Entrar</li></a>
         </div>
         
