--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,8 +90,7 @@ a{
     font-size: 50px;
     position: absolute;
     text-align: center;
-    margin-top: 200px;
-    
+    margin-top: 200px;    
 }
 
 .slider {
@@ -647,6 +646,10 @@ footer {
     display: none;
 }
 
+.container {
+
+    display: none;
+}
 
 @media screen and (max-width: 500px) {
 
@@ -656,21 +659,17 @@ footer {
     .options {
         display: none;
     }
+    .bar {
+
+        display: none;
+    }
     .respon {
         display: flex;
         margin-left: 65%;
     }
-    .square {
-
-        width: 60px;
-        height: 40px;
-        background-color: #00000000;
-        cursor: pointer;
-
-    }
     #check {
 
-        visibility: idden;
+        visibility: hidden;
     }
     .text-menu {
 
@@ -688,7 +687,6 @@ footer {
     }
     .msg-home{
 
-        width: 100px;
         font-size: 30px;
     }
     #check {
@@ -697,13 +695,136 @@ footer {
     }
     .container {
 
-        background-color: #000000;
-        margin-left: 70%;
+        background-color: #00000000;
+        margin-left: 65%;
         width: 60px;
+        margin-top: 10px;
+        z-index: 3;
+        display: inline;
     }
-    .container input:checked ~ .checkmark {
+    .trace {
 
-        color: #05f83a;
+        width: 70px;
+        height: 8px;
+        background-color: aliceblue;
+        border-radius: 4px;
+        transition: 0.5ms ease-in-out;
+        position: absolute;
+        transform: rotate(0);
+        text-align: right;
+        visibility:visible;
+    }
+    .trace:nth-child(2) {
+        width: 70px;
+        height: 8px;
+        background-color: aliceblue;
+        border-radius: 4px;
+        transition: 0.5ms ease-in-out;
+        position: absolute;
+        transform: rotate(0);
+        text-align: right;
+        visibility:visible;
+        margin-top: 20px;
+
+    }
+    .trace:nth-child(3) {
+        width: 70px;
+        height: 8px;
+        background-color: aliceblue;
+        border-radius: 4px;
+        transition: 0.5ms ease-in-out;
+        position: absolute;
+        transform: rotate(0);
+        text-align: right;
+        visibility:visible;
+        margin-top: 40px;
+
+    }
+    .page {
+
+        width: 200px;
+        height: 400px;
+        background-color: #00000000;
+        margin-left: -118px;
+        margin-top: -15px;
+        transition: .8;
+    }
+
+    .op_trace {
+        display: none;
+    }.op_trace2 {
+        display: none;
+    }.op_trace3 {
+        display: none;
+    }.op_trace4 {
+        display: none;
+    }
+
+    .container input:checked ~ .trace {
+
+        transform: rotate(90deg);
+        margin-top: 10px;
+        margin-left: -10px;
+        transition: .8s;
+    }
+    .container input:checked ~ .trace:nth-child(2) {
+
+
+        transform: rotate(70deg);
+        margin-left: 5px;
+        transition: .8s;
+
+    }
+    .container input:checked ~ .trace:nth-child(3) {
+
+        transform: rotate(90deg);
+        transition: .8s;
+        margin-left: 17px;
+    }
+    .container input:checked ~ .page {
+
+        background-color: #000000cf;
+        box-shadow: 0 0 10px 0 black;
+        transition: .8s;
+
+    }
+    .container input:checked ~ .big_trace {
+
+        width: 170px;
+        height: 2px;
+        background-color: white;
+        border-radius: 3rem;
+        margin-left: -100px;
+        margin-top: -320px;
+        transition: .2s;
+    }
+    .container input:checked ~ .op_trace {
+
+        display: flex;
+        transition: .2s;
+        margin-left: -100px;
+        font-size: 30px;
+    }
+    .container input:checked ~ .op_trace2 {
+
+        display: flex;
+        transition: .2s;
+        margin-left: -100px;
+        font-size: 30px;
+    }
+    .container input:checked ~ .op_trace3 {
+
+        display: flex;
+        transition: .2s;
+        margin-left: -100px;
+        font-size: 30px;
+    }
+    .container input:checked ~ .op_trace4 {
+
+        display: flex;
+        transition: .2s;
+        margin-left: -100px;
+        font-size: 30px;
     }
     .main {
 
@@ -713,7 +834,7 @@ footer {
     }
     .main1 {
 
-        width: 300px;
+        width: 350px;
         margin-right: -10px;
     }
     .main2 {
@@ -735,7 +856,7 @@ footer {
     }
     .fh2 {
 
-        margin-left: 170px;
+        margin-left: 175px;
     }
 }
 
